--- a/dos33.html
+++ b/dos33.html
@@ -2802,8 +2802,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     002 ;
                     003 ; COMMAND NAME TABLE
                     004 ;
-                    005 <a class="f" name='EC1'      >EC1         </a>EQU *
-                    006 <a class="f" name='CMDNTB'   >CMDNTB      </a>EQU *
+                    005 <a class="d" name='EC1'      >EC1         </a>EQU *
+                    006 <a class="d" name='CMDNTB'   >CMDNTB      </a>EQU *
 2884:49 4E 49 D4    007             DCI "INIT"                                      ; <a class='dumb'>HNTODAOS: #1</a>Why is INIT listed first??? CATALOG is used <i>far more</i> then INIT
 2888:4C 4F 41 C4    008             DCI "LOAD"                                      ; Either sorted these by:
 288C:53 41 56 C5    009             DCI "SAVE"                                      ;   a) frequency of use, (best)
