Cleanup <hr> extra line breaks

--- a/dos33.html
+++ b/dos33.html
@@ -2797,6 +2797,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     143 <a class="f" name="MVSRTN" >MVSRTN      </a>EQU *
 2883:60             144             RTS
 
+
 <hr><hr class='join'>=== <a class="file" name="CMDTBLS">CMDTBLS</a> - Commands, Page <a class="page" name="page21">21</a>, <b class="ts">T1S7</b> - <b class="ts">T1S9</b>, $<span class='n'>A884</span> .. $<span class='n'>AA4E</span> ===<hr class='join'><hr>
                     001                 PAGE
                     002 ;
@@ -2977,8 +2978,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     113             DW 1                                            ; [2]
                     114             DW 7            ; SLOT RANGE
                     115             DW 1                                            ; [3]
-<hr>
-2963:FF 7F          116             DW 32767        ; LENGTH RANGE                  ; === Page <a class='page' name='page23'>23</a> ===
+<hr>2963:FF 7F          116             DW 32767        ; LENGTH RANGE                  ; === Page <a class='page' name='page23'>23</a> ===
 2965:00 00          117             DW 0                                            ; [4]
 2967:FF 7F          118             DW 32767        ; REC NO RANGE
 2969:00 00          119             DW 0                                            ; [5]
@@ -3031,12 +3031,6 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     162             DFB EM8,EM9,EM10,EM11
                     163             DFB EM12,EM13,EM14
                     164             DFB EM15
-
-
-
-
-
-
 
 
 <hr><hr class='join'>=== <a class="file" name="FDOSENT">FDOSENT</a> - External Entry Point, Page <a class="page" name="page60">60</a>, <b class="ts">T1S9</b>, $<span class='n'>2A4F</span> ===<hr class='join'><hr>
