--- a/dos33.html
+++ b/dos33.html
@@ -2806,7 +2806,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     005 <a class="d" name='EC1'      >EC1         </a>EQU *
                     006 <a class="d" name='CMDNTB'   >CMDNTB      </a>EQU *
 2884:49 4E 49 D4    007             DCI "INIT"                                      ; <a class='dumb' name='HNTODAOS1'>HNTODAOS: #1</a> Why is INIT listed first??? CATALOG is used <i>far more</i> then INIT
-2888:4C 4F 41 C4    008             DCI "LOAD"                                      ; Either sorted these by:
+2888:4C 4F 41 C4    008             DCI "LOAD"                                      ; Either sort these by:
 288C:53 41 56 C5    009             DCI "SAVE"                                      ;   a) frequency of use, (best)
 2890:52 55 CE       010             DCI "RUN"                                       ;   b) alphabetical (better)
 2893:43 48 41 49 CE 011             DCI "CHAIN"$                                    ; i.e. "Power Users" are more likely to use BRUN, BLOAD, BSAVE before they use DELETE
