Move concede to proper line

--- a/dos33.html
+++ b/dos33.html
@@ -2844,8 +2844,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2908:00             035             DFB 0                                           ; end sentinel, see <span class='todo'>TODO</span>
                     036             PAGE
                     037 ;                                                                   ; *sigh* Typical crap names; bitmask flags should be prefixed with a common name:
-                    038 ; COMMAND SYNTAX OP EQUATES FOR SYNTAX BYTE ONE                     ;     <span class='code'>P1_</span>     (better, but will concede a short name is extremely convenient)
-                    039 ;                                                                   ;     <span class='code'>PARAM1_</span> (best)
+                    038 ; COMMAND SYNTAX OP EQUATES FOR SYNTAX BYTE ONE                     ;     <span class='code'>P1_</span>     (better)
+                    039 ;                                                                   ;     <span class='code'>PARAM1_</span> (best, but will concede a short name is extremely convenient)
                                                                                             ;
                                                                                             ;(better)
                     040 <a class='e' name='NPB'    >NPB         </a>EQU $<span class='n'>80</span>         ; NO PARMS OK, COMMAND GOES TO BASIC    ; P1_BAS    The <a class='dumb' name='amateur1'>first sign</a> of an amateur programmer:
